# ByteConvert

./: CMakeLists.txt  CMakePresets.json  README.md
ByteConvert/: ByteConvert.cpp  ByteConvert.h  CMakeLists.txt  Sink.h  Source.h
Test/: CMakeLists.txt
Test/GTest/: CMakeLists.txt  MockSink.h  MockSource.h  TestConvert.cpp
Test/MainTest/: CMakeLists.txt  Main.cpp  OstSink.cpp  OstSink.h  VecSource.cpp  VecSource.h
